# general-tools

./: .gitignore  .gitmodules  README.md
general-tools-cpp/command/foxsicmd/: CMakeLists.txt  README.md
general-tools-cpp/command/foxsicmd/app/: main.cpp
general-tools-cpp/command/foxsicmd/include/: json.hpp
general-tools-cpp/command/foxsicmd/src/: commands.cpp  commands.h  line.cpp  line.h  uart.cpp  uart.h  util.cpp  util.h
general-tools-cpp/hk/power/ptui/: CMakeLists.txt  README.md  debug_client.cpp  main.cpp
general-tools-cpp/hk/power/ptui/app/: debug_client.cpp  debug_server.cpp  main.cpp
general-tools-cpp/hk/power/ptui/src/: listen.cpp  listen.h  parameters.cpp  parameters.h
general-tools-cpp/hk/power/ptui/test/: test.cpp
general-tools-cpp/hk/rtd/rtui/: CMakeLists.txt  README.md
general-tools-cpp/hk/rtd/rtui/app/: main.cpp
general-tools-cpp/hk/rtd/rtui/src/: listen.cpp  listen.h  parameters.cpp  parameters.h
general-tools-py/cooler/: README.md  cooler.py  plotting.py  readBackwards.py
